# StateMachine

./: CMakeLists.txt  README.md
.github/workflows/: BuildAndTest.yml
cmake/: glog.cmake  gtest.cmake
include/StateMachine/: StateMachine.hpp
src/: Event.cc  StateMachine.cc
tests/: CMakeLists.txt  event_tests.cc  fa_tests.cc  general_tests.cc
tests/testFAs/: end_with_zero_string_FA.hpp  legal_number_FA.hpp
